--- a/pages/Detail_Page5/Detail_Page5.wxml
+++ b/pages/Detail_Page5/Detail_Page5.wxml
@@ -4,11 +4,14 @@
 
 <!-- 关于拍卖倒计时的展示组件，判断当前用户的身份是不是中标者，若是中标者直接显示拍卖已结束；
      判断剩余时间是不是置空，是则不显示倒计时，表示此拍卖长期有效；以上均不满足则输出剩余时间-->
-<view wx:if="{{timeLeft != '' && user.user_role!='winner'}}" class='text-grey text-center' id="count_down">
+<view wx:if="{{timeLeft != '' && user.user_role!='winner' && item.item_status=='selling'}}" class='text-grey text-center' id="count_down">
   <text>距离拍卖结束：{{timeLeft}}</text>
 </view>
-<view wx:if="{{user.user_role=='winner'}}" class='text-grey text-center' id="count_down">
+<view wx:if="{{user.user_role=='winner' || item.item_status=='sold'}}" class='text-grey text-center' id="count_down">
   <text>距离拍卖结束：拍卖已结束</text>
+</view>
+<view wx:if="{{item.item_status=='preparing'}}" class='text-grey text-center' id="count_down_pre">
+  <text>拍卖还未开始</text>
 </view>
 
 <!-- 用户信息部分，用户的信息存在js.data中的user数组中 -->
@@ -31,13 +34,13 @@
     <text id="price_num"  class="text-red text-xxl">{{item.current_price}}</text>
    
     <!-- 如果是中标者则显示成交价，否则都显示当前价 -->
-    <text wx:if="{{user.user_role !='winner'}}" id="price_text" class="text-gray padding">当前价</text>
-    <text wx:if="{{user.user_role =='winner'}}" id="price_text" class="text-gray padding">成交价</text>
+    <text wx:if="{{user.user_role !='winner' && item.item_status!='sold'}}" id="price_text" class="text-gray padding">当前价</text>
+    <text wx:if="{{user.user_role =='winner' || item.item_status=='sold'}}" id="price_text" class="text-gray padding">成交价</text>
     
     <!-- 如果是竞拍者则还会额外显示用户当前的出价 -->
-    <text wx:if="{{user.user_role=='buyer'}}" id="price_yuan" class="text-red text-lg padding-left">¥</text>
-    <text wx:if="{{user.user_role=='buyer'}}" id="price_num"  class="text-red text-xl padding-right-xs">{{user.user_price}}</text>
-    <text wx:if="{{user.user_role=='buyer'}}" id="price_text" class="text-gray">你的出价</text>
+    <text wx:if="{{user.user_role=='buyer' && item.item_status=='selling'}}" id="price_yuan" class="text-red text-lg padding-left">¥</text>
+    <text wx:if="{{user.user_role=='buyer' && item.item_status=='selling'}}" id="price_num"  class="text-red text-xl padding-right-xs">{{user.user_price}}</text>
+    <text wx:if="{{user.user_role=='buyer' && item.item_status=='selling'}}" id="price_text" class="text-gray">你的出价</text>
   </view>
 
   <!-- 商品的标题，用拍卖者给出 -->
@@ -132,7 +135,7 @@
 
 <!-- 评论，当用户为中标者即拍卖已结束时不显示，因为没有了出价的需求所以没有底端栏了，
      这个和winner的区分开来只是为了不同的margin-bottom                       -->
-<view wx:if="{{user.user_role!='winner'}}" id="comment" class="padding margin-bottom-xl bg-white align-center">
+<view wx:if="{{user.user_role!='winner' && item.item_status!='preparing'}}" id="comment" class="padding margin-bottom-xl bg-white align-center">
   <view id="comment_title" class="padding text-xl bolder text-gray align-center">
     <text>留言</text>
     <view id="comment_button" ><button bindtap='changeComment' class="text-lg cu-btn round bg-green">我要留言</button></view>
@@ -150,8 +153,10 @@
             <image class="user_info_imgg1 margin-xs" src="{{user.user_url}}"></image>
             <view class="comment_text margin text-black">{{user.user_name}}</view>
             <view wx:if="{{user.user_role=='seller'}}" class="text-lg margin-xs cu-tag bg-green light radius">卖家</view>
+            <button wx:if="{{item.name == user.name}}" class="delete cu-btn padding-0 text-blue bg-white">删除</button>
           </view>
           <view class="padding comment_text">{{item.text}}</view>
+          <view class="padding-0 padding-bottom-sm text-sm comment_time">{{item.time}}</view>
         </view>
   </view>
 
@@ -163,8 +168,10 @@
             <image class="user_info_imgg1 margin-xs" src="{{item.url}}"></image>
             <button  bindtap="openSubcomment_1" data-text="{{item.name}}" data-father="{{item.item_id}}" class="text-lg cu-btn padding-0 text-blue bg-white">{{item.name}}</button>
             <view wx:if="{{item.role=='seller'}}" class="text-lg margin-xs cu-tag bg-green light radius">卖家</view>
+            <button wx:if="{{item.name == user.name}}" class="text-lg cu-btn padding-0 text-blue bg-white">删除</button>
           </view>
           <view class="padding comment_text">{{item.text}}</view>
+          <view class="padding-0 padding-bottom-sm text-sm comment_time">{{item.time}}</view>
 
           <!-- sub评论的显示 -->
           <view class="subcomment padding comment_text text-df" wx:for="{{item.sub_comments}}">
@@ -174,6 +181,7 @@
               <button bindtap="openSubcomment" data-text="{{item.target}}" data-father="{{item.father}}" class="cu-btn padding-0 text-blue bg-white">{{item.target}}</button>
             </view>
             {{item.text}}
+            <view class="padding-0 text-sm comment_time_sub">{{item.time}}</view>
           </view>
 
           <!-- 新sub评论的显示 -->
@@ -185,6 +193,7 @@
                 <button  hidden="{{subfor.father!=item.item_id}}" bindtap="openSubcomment" data-text="{{subfor.target}}" data-father="{{subfor.father}}" class="cu-btn padding-0 text-blue bg-white">{{subfor.target}}</button>
               </view>
               <text hidden="{{subfor.father!=item.item_id}}">{{subfor.text}}</text>
+              <view class="padding-0 padding-bottom-sm text-sm comment_time">{{subfor.time}}</view>
             </view>
           </view> 
         </view>
@@ -193,7 +202,7 @@
 
 
 <!-- visitor用户的底端栏 -->
-<view wx:if="{{user.user_role=='visitor'}}" hidden="{{bid_show || comment_show}}" id="fixed_buttom" class="bg-white padding-sm flex justify-between ">
+<view wx:if="{{user.user_role=='visitor' && item.item_status=='selling'}}" hidden="{{bid_show || comment_show}}" id="fixed_buttom" class="bg-white padding-sm flex justify-between ">
   <button bindtap='changeComment' class="text-lg cu-btn round bg-white {{shadow?'shadow':''}}" >
    <text class="padding-right-xs cuIcon-comment lg text-gray light"></text>留言
   </button>  
@@ -203,7 +212,7 @@
   </view>
 </view>
 <!-- visitor出价界面 -->
-<view wx:if="{{user.user_role=='visitor'}}" hidden="{{!bid_show}}" id="fixed_buttom_bid" class="bg-white padding-lg padding-top-sm">
+<view wx:if="{{user.user_role=='visitor'  && item.item_status=='selling'}}" hidden="{{!bid_show}}" id="fixed_buttom_bid" class="bg-white padding-lg padding-top-sm">
   <view class="padding-xl flex justify-between algin-center">
     <button bindtap='priceReduce' class="text-gray cu-btn icon text-xxl padding-lg">-</button>
     <view class="cu-tag round bg-green light text-xxl padding-lg">{{user.user_new_price}}</view>
@@ -216,7 +225,7 @@
 </view>
 
 <!-- buyer用户的底端栏 -->
-<view wx:if="{{user.user_role=='buyer'}}" hidden="{{bid_show || comment_show}}"  id="fixed_buttom" class="bg-white padding-sm flex justify-between align-center">
+<view wx:if="{{user.user_role=='buyer' && item.item_status=='selling'}}" hidden="{{bid_show || comment_show}}"  id="fixed_buttom" class="bg-white padding-sm flex justify-between align-center">
   <button bindtap='changeComment' class="text-lg cu-btn round bg-white {{shadow?'shadow':''}}">
    <text class="padding-right-xs cuIcon-comment lg text-gray light"></text>留言
   </button>
@@ -231,7 +240,7 @@
     </view>
   </view>  
 </view>
-<view wx:if="{{user.user_role=='buyer'}}" hidden="{{!bid_show}}" id="fixed_buttom_bid" class="bg-white padding-lg padding-top-sm">
+<view wx:if="{{user.user_role=='buyer' && item.item_status=='selling'}}" hidden="{{!bid_show}}" id="fixed_buttom_bid" class="bg-white padding-lg padding-top-sm">
   <view class="padding-xl flex justify-between algin-center">
     <button bindtap='priceReduce' class="text-gray cu-btn icon text-xxl padding-lg">-</button>
     <view class="cu-tag round bg-green light text-xxl padding-lg">{{user.user_new_price}}</view>
@@ -253,7 +262,7 @@
 
 <!-- winner用户的留言 -->
 <!-- 解决margin问题 -->
-<view wx:if="{{user.user_role=='winner'}}" id="comment" class="padding bg-white align-center">
+<view wx:if="{{user.user_role=='winner' || item.item_status=='preparing' || item.item_status=='sold'}}" id="comment" class="padding bg-white align-center">
   <view id="comment_title" class="padding text-xl bolder text-gray align-center">
     <text>留言</text>
     <view id="comment_button" ><button class="text-lg cu-btn round bg-green">我要留言</button></view>
